--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,14 @@ img {
   grid-template-columns: 1fr;
   gap: 1rem;
 }
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
 .btn {
   display: inline-block;
   padding: 0.5rem 1.5rem;
@@ -219,9 +227,11 @@ img {
   border-left: 5px solid var(--primary-color);
   padding-left: 1rem;
   color: #333;
+  margin: 2rem 0 1rem;
 }
 .more .item {
   margin: 1.5rem 0;
+  align-items: center;
 }
 
 .more .item > div {
@@ -242,8 +252,36 @@ img {
 .more .item img:hover {
   transform: scale(1.1);
 }
+
 .more-content .item a {
   color: #000;
+}
+
+/* drinks */
+.drinks {
+  padding-top: 1rem;
+  align-items: flex-end;
+}
+.drink {
+  object-fit: cover;
+  /* padding: 1rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.drink a {
+  text-align: center;
+  margin-top: 1rem;
+}
+.drink img {
+  height: 50%;
+  object-fit: contain;
+  transition: 1s ease;
+  cursor: pointer;
+}
+
+.drink img:hover {
+  transform: scale(1.1);
 }
 /* Footer */
 .main-footer {
@@ -380,6 +418,14 @@ img {
     height: 200px;
   }
 
+  /* drinks */
+  .drinks {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .drink img {
+    width: 40%;
+  }
   /* footer */
   .main-footer .footer-top,
   .main-footer .footer-bottom {
