--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,7 @@ img {
 /* Slider */
 .swiper-container {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 0;
 }
 
 .swiper-slide {
@@ -218,6 +217,11 @@ img {
   background-image: none;
 }
 
+.swiper-button-next,
+.swiper-button-prev,
+.swiper-pagination {
+  color: #fff;
+}
 /* Section More */
 .more {
   padding: 1rem 0;
