--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,10 @@ img {
   color: #fff;
   background: var(--primary-color);
 }
-
+.btn-warning {
+  color: yellow;
+  background: var(--warning-color);
+}
 .arrow-icon {
   content: "";
   background-image: url(../img/arrow.svg);
