--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,17 @@ img {
   color: #fff;
   background: var(--primary-color);
 }
+
 .btn-warning {
   color: yellow;
   background: var(--warning-color);
 }
+
+.btn-blue {
+  color: cyan;
+  background: var(--blue-color);
+}
+
 .arrow-icon {
   content: "";
   background-image: url(../img/arrow.svg);
